<resources>
    <string name="app_name">Timetable</string>
    <string name="timetable">Timetable</string>
    <string name="ai">AI</string>
    <string name="info">Info</string>

    <string name="send_email">Send Email</string>

    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>

    <string name="current_week">%1$d week of study</string>
    <string name="no_internet">No internet connection</string>

    <string name="subgroup">s/g</string>

    <string name="fitr" translatable="false">ФИТР</string>
    <string name="msf" translatable="false">МСФ</string>
    <string name="gf" translatable="false">ГФ</string>
    <string name="spo" translatable="false">СПО</string>

    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="current">Current</string>

    <string name="warning_current_week">Could not get the current school week. The schedule may not be displayed correctly</string>
    <string name="warning_has_invalid_ranges">Failed to process the schedule. Please contact us via the feedback form.</string>

    <string name="search_hint">Please enter your teacher name</string>
    <string name="search">Search</string>
    <string name="teacher">Teacher</string>

    <string name="today">Today</string>
    <string name="shortcut">Shortcut</string>
    <string name="assistant_beta">Assistant</string>

    <string name="telegram">Telegram</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="buy_me_coffee">Buy me coffee</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="iep">IEP</string>

    <string name="coffee_title">Coffee for the developer</string>
    <string name="coffee_description">Coffee for the developer: espresso or Americano. Gratitude and inspiration in every sip!</string>

    <string name="thanks_for_support">Thanks for support!</string>
    <string name="please">Please</string>
    <string name="thanks_description">Your contribution helps us develop and improve our application. We really appreciate your help!</string>
    <string name="party_popper" translatable="false">🎉</string>

    <string name="based_on_timetable">Timetable for %1$s</string>

    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="you">You</string>
    <string name="assistant">ChatGPT</string>

    <string name="first_instruction"><big><b>ChatGPT</b></big><![CDATA[\n\n* May occasionally generate incorrect information\n* May occasionally produce harmful instructions or biased content\n* Limited knowledge of world and events after 2023]]></string>

    <string name="notification_permission">Please grant Notification permission from App Settings</string>
    <string name="notification_channel">Preload</string>

    <string name="building">Building a Timetable Model…</string>
    <string name="preload">Preload: %s</string>

    <string name="preload_timetable">Preload timetable</string>
    <string name="disable_week_classes">Don\'t suggest classes this week</string>
    <string name="week_chooser">Choosing a school week</string>
    <string name="show_prev_group">Display information about previous audience visitors</string>
    <string name="show_teacher_path">Show teachers moving between buildings</string>
    <string name="show_route_time">Show the required time to move to the classroom where the next class will be held</string>
    <string name="data_analytics">Data Analytics</string>
    <string name="personalization">Personalization</string>
    <string name="hints">Hints</string>
    <string name="other">Other</string>
    <string name="disable_iep">Disable IEP tab</string>
    <string name="disable_ai">Disable AI tab</string>
    <string name="data_analytics_info">To use the analytics features, you must first download your entire class schedule, which will take approximately 5 minutes. To start downloading, click on the button below. Analytical data is generated only for the current school week indicated on the website. The loaded schedule of all groups may no longer be relevant over time</string>
    <string name="about">Made with ❤️ Dmitry Kotov 2024.</string>

    <string name="school_week">School week</string>
    <string name="week">Week %d</string>

    <string name="suggest_text">You can change these settings later in the settings</string>
    <string name="week_parity_filter">Filter by week parity</string>
    <string name="hide">Hide</string>

    <string-array name="time" translatable="false">
        <item>08.30 – 10.00</item>
        <item>10.15 – 11.45</item>
        <item>12.30 – 14.00</item>
        <item>14.15 – 15.45</item>
        <item>16.00 – 17.30</item>
        <item>17.45 – 19.15</item>
        <item>19.30 - 21.00</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="klass">
        <item>1 class</item>
        <item>2 class</item>
        <item>3 class</item>
        <item>4 class</item>
        <item>5 class</item>
        <item>6 class</item>
        <item>7 class</item>
    </string-array>
</resources>
