<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GroupFragment">

    <fragment
        android:id="@+id/GroupFragment"
        android:name="com.wavecat.mivlgu.ui.groups.GroupFragment"
        android:label="@string/timetable"
        tools:layout="@layout/group_fragment">

        <action
            android:id="@+id/action_GroupFragment_to_TimetableFragment"
            app:destination="@id/TimetableFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/TimetableFragment"
        android:name="com.wavecat.mivlgu.ui.timetable.TimetableFragment"
        android:label="@string/timetable"
        tools:layout="@layout/timetable_fragment">

        <argument
            android:name="timetable_name"
            app:argType="string" />

        <argument
            android:name="cache_key"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.wavecat.mivlgu.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/ChatFragment"
        android:name="com.wavecat.mivlgu.ui.chat.ChatFragment"
        android:label="@string/ai"
        tools:layout="@layout/chat_fragment" />

</navigation>