<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:chipSpacingVertical="0dp"
        app:layout_constraintEnd_toStartOf="@+id/groups"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.chip.Chip
            android:id="@+id/fitr"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitr"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fem"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/msf"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msf"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gf"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gf"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/spo"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spo"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/teacher"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groups"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chipGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="2"
        tools:listitem="@layout/layout_group" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>